switched packaging to appassembler